syntax = "proto3";
import "commontype/ClientInfo.proto";
import "commontype/TopicMessage.proto";
import "inboxservice/Replica.proto";
import "inboxservice/TopicFilterOption.proto";
import "inboxservice/LWT.proto";
import "inboxservice/InboxFetched.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxCoProcProtos";

package inboxservice;

message BatchGetRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 now = 3;
  }
  repeated Params params = 1;
}

message InboxVersion{
  uint64 incarnation = 1;
  uint64 version = 2; // state version
  uint32 expirySeconds = 3;
  optional LWT lwt = 4;
  commontype.ClientInfo client = 5;
}
message BatchGetReply{
  message Result{
    repeated InboxVersion version = 1;
  }
  repeated Result result = 1;
}

message BatchCheckSubRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    string topicFilter = 4;
  }
  repeated Params params = 1;
  uint64 now = 2;
}

message BatchCheckSubReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    NO_MATCH = 2;
  }
  repeated Code code = 1;
}

message BatchCreateRequest{
  message Params {
    string inboxId = 1;
    uint64 incarnation = 2;
    uint32 expirySeconds = 3;
    uint32 keepAliveSeconds = 4;
    uint32 limit = 5;
    bool dropOldest = 6;
    optional LWT lwt = 7;
    commontype.ClientInfo client = 8; // the connected client
    uint64 now = 9;
  }
  repeated Params params = 1;
}

message BatchCreateReply{
  repeated bool succeed = 1;
}

message BatchAttachRequest{
  message Params {
    string inboxId = 1;
    uint64 incarnation = 2;
    uint64 version = 3;
    uint32 expirySeconds = 4;
    uint32 keepAliveSeconds = 5;
    optional LWT lwt = 6;
    commontype.ClientInfo client = 7; // the attached client
    uint64 now = 8;
  }
  repeated Params params = 1;
  Replica leader = 2; // the leader replica
}

message BatchAttachReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
  }
  repeated Code code = 1;
}

message BatchDetachRequest{
  message Params {
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
    uint32 expirySeconds = 5;
    bool discardLWT = 6;
    uint64 now = 7;
  }
  repeated Params params = 1;
  Replica leader = 2; // the leader replica
}

message BatchDetachReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
  }
  repeated Code code = 1;
}

message BatchDeleteRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
  }
  repeated Params params = 1;
}

message BatchDeleteReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
  }
  message Result{
    Code code = 1;
    map<string, TopicFilterOption> topicFilters = 2;
  }
  repeated Result result = 1;
}

message BatchSubRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
    string topicFilter = 5;
    TopicFilterOption option = 6;
    uint64 now = 7;
  }
  repeated Params params = 1;
}

message BatchSubReply{
  enum Code{
    OK = 0;
    EXISTS = 1;
    EXCEED_LIMIT = 2;
    NO_INBOX = 3;
    CONFLICT = 4;
  }
  repeated Code code = 1;
}

message BatchUnsubRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
    string topicFilter = 5;
    uint64 now = 6;
  }
  repeated Params params = 1;
}

message BatchUnsubReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    NO_SUB = 2;
    CONFLICT = 3;
  }
  message Result{
    Code code = 1;
    optional TopicFilterOption option = 2; // when code is OK
  }
  repeated Result result = 1;
}

message BatchFetchRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint32 maxFetch = 4;
    optional uint64 qos0StartAfter = 5;
    optional uint64 sendBufferStartAfter = 6;
  }
  repeated Params params = 1;
}

message BatchFetchReply{
  repeated Fetched result = 1;
}

// insert won't change version & lastActive timestamp
message SubMessagePack{
  map<string, uint64> matchedTopicFilters = 1; // key: topicFilter, value: route incarnation
  commontype.TopicMessagePack messages = 2;
}
message InboxSubMessagePack{
  string tenantId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  repeated SubMessagePack messagePack = 4;
}
message BatchInsertRequest{
  repeated InboxSubMessagePack inboxSubMsgPack = 1;
}

message InboxInsertResult{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
  }
  message PackInsertResult{
    string topicFilter = 1;
    uint64 incarnation = 2;
    bool rejected = 3;
  }
  Code code = 1;
  repeated PackInsertResult result = 2; // same order as messagePack
}

message BatchInsertReply{
  repeated InboxInsertResult result = 2; // same order as inboxSubMsgPack when code is OK
}

message BatchCommitRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
    optional uint64 qos0UpToSeq = 5;
    optional uint64 sendBufferUpToSeq = 6;
    uint64 now = 8;
  }
  repeated Params params = 1;
}

message BatchCommitReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
  }
  repeated Code code = 1;
}

message BatchSendLWTRequest{
  message Params{
    string tenantId = 1;
    string inboxId = 2;
    uint64 incarnation = 3;
    uint64 version = 4;
    uint64 now = 5;
  }
  repeated Params params = 1;
}

message BatchSendLWTReply{
  enum Code{
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    TRY_LATER = 3;
    ERROR = 4;
  }
  repeated Code code = 1;
}

message ExpireTenantRequest{
  string tenantId = 1;
  uint32 expirySeconds = 2;
  uint64 now = 3;
}

message ExpireTenantReply{
}

message GCRequest {
  uint64 now = 1;
}

message GCReply {
}

message CollectMetricsRequest{
  uint64 reqId = 1;
}

message CollectMetricsReply{
  uint64 reqId = 1;
  map<string, uint64> subCounts = 2; // sub count by tenant
  map<string, uint64> subUsedSpaces = 3; // sub used space by tenant
  map<string, uint64> usedSpaces = 4; // total used space by tenant
}

message InboxServiceRWCoProcInput{
  uint64 reqId = 1;
  oneof type{
    BatchCreateRequest batchCreate = 2;
    BatchAttachRequest batchAttach = 3;
    BatchDetachRequest batchDetach = 4;
    BatchDeleteRequest batchDelete = 5;
    BatchSubRequest batchSub = 6;
    BatchUnsubRequest batchUnsub = 7;
    BatchInsertRequest batchInsert = 8;
    BatchCommitRequest batchCommit = 9;
  }
}

message InboxServiceRWCoProcOutput{
  uint64 reqId = 1;
  oneof type{
    BatchCreateReply batchCreate = 2;
    BatchAttachReply batchAttach = 3;
    BatchDetachReply batchDetach = 4;
    BatchDeleteReply batchDelete = 5;
    BatchSubReply batchSub = 6;
    BatchUnsubReply batchUnsub = 7;
    BatchInsertReply batchInsert = 8;
    BatchCommitReply batchCommit = 9;
    ExpireTenantReply expireTenant = 10;
  }
}

message InboxServiceROCoProcInput{
  uint64 reqId = 1;
  oneof input{
    BatchGetRequest batchGet = 2;
    BatchFetchRequest batchFetch = 3;
    BatchCheckSubRequest batchCheckSub = 4;
    BatchSendLWTRequest batchSendLWT = 5;
    ExpireTenantRequest expireTenant = 6;
    GCRequest gc = 7;
  }
}

message InboxServiceROCoProcOutput{
  uint64 reqId = 1;
  oneof output{
    BatchGetReply batchGet = 2;
    BatchFetchReply batchFetch = 3;
    BatchCheckSubReply batchCheckSub = 4;
    BatchSendLWTReply batchSendLWT = 5;
    ExpireTenantReply expireTenant = 6;
    GCReply gc = 7;
  }
}